
SET(LIB_NAME     dtNet)


SET(HEADER_PATH ${DELTA3D_SOURCE_DIR}/inc/${LIB_NAME})
SET(SOURCE_PATH ${DELTA3D_SOURCE_DIR}/src/${LIB_NAME})
file(GLOB LIB_PUBLIC_HEADERS "${HEADER_PATH}/*.h")
file(GLOB LIB_SOURCES "*.cpp")
list(REMOVE_ITEM LIB_SOURCES ${SOURCE_PATH}/precomp.cpp)

INCLUDE_DIRECTORIES( ${GNE_INCLUDE_DIR}  
                     ${HAWKNL_INCLUDE_DIR}
                     ${Boost_INCLUDE_DIR})

ADD_LIBRARY(${LIB_NAME} STATIC
    ${LIB_PUBLIC_HEADERS}
    ${LIB_SOURCES}
)

INCLUDE(ModuleInstall OPTIONAL)
